--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,9 @@ p {
   --grayish-blue: hsl(212, 23%, 69%);
   --light-grayish-blue: hsl(210, 46%, 95%);
 }
+
+
+
 body {
   background-color: var(--light-grayish-blue);
   display: flex;
@@ -34,13 +37,12 @@ body {
   max-height: 41.3rem;
   background-color: white;
   border-radius: 0.75rem;
-
-  .drawer-img {
-    width: 100%;
-    height: 15.3rem;
-    object-fit: cover;
-    border-radius: 0.75rem 0.75rem 0 0;
-  }
+}
+.drawer-img {
+  width: 100%;
+  height: 15.3rem;
+  object-fit: cover;
+  border-radius: 0.75rem 0.75rem 0 0;
 }
 .article-info-container {
   padding: 2.4rem 2.6rem 0 2.6rem;
@@ -49,11 +51,13 @@ body {
     font-size: 1.5rem;
     line-height: 130%;
     margin-bottom: 1.8rem;
+    font-weight: 700;
   }
   p {
     font-size: 1rem;
     color: var(--desaturated-dark-blue);
     line-height: 140%;
+    font-weight: 500;
   }
 }
 
@@ -111,6 +115,8 @@ body {
   padding: 1.3rem 2.6rem 1.3rem 2.6rem;
   background-color: var(--very-dark-grayish-blue);
   border-radius: 0 0 0.7rem 0.7rem;
+  position: relative;
+  bottom: 66.28px;
 }
 .links {
   display: flex;
@@ -157,4 +163,59 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 50rem) {
+  .main-container {
+    display: flex;
+    max-width: 56.15rem;
+    max-height: 21.5rem;
+  }
+  .drawer-img {
+    width: 21.9rem;
+    height: 21.5rem;
+    border-radius: 0.75rem 0 0 0.75rem;
+  }
+  .article-info-container {
+    padding: 2.3rem 3rem 0 3rem;
+    margin-bottom: 1.8rem;
+  }
+  .profile-container {
+    margin-top: 0;
+  }
+  .profile {
+    padding: 0 3rem 2.3rem 3rem;
+  }
+  .about {
+    p {
+      font-size: 1rem;
+    }
+  }
+  .profile-links {
+    max-width: 19rem;
+    max-height: 4.2rem;
+    border-radius: 0.7rem;
+    position: relative;
+    left: 20.5rem;
+    bottom: 11rem;
+    justify-content: none;
+  }
+  .profile-links::after {
+    content: ' ';
+    position: absolute;
+    left: 45%;
+    top: 4rem;
+    border: solid;
+    border-color: var(--very-dark-grayish-blue) transparent transparent
+      transparent;
+    border-width: 1rem;
+  }
+  .links {
+    gap: 1.5rem;
+  }
+  .share-icon-links {
+    position: relative;
+    top: 5.1rem;
+    right: 7.7rem;
+  }
 }
